# difp

./: .gitignore  CMakeLists.txt
cl/: difp.c  difp2.c
profiles/: extra.phm
profiles/datasheets/: kodak-endura.datasheet  kodak-portra-400.datasheet  kodak-vision-250d-5207.datasheet  kodak-vision-color-print-2383.datasheet  kodak-vision3-250d-5207-2.datasheet  kodak-vision3-250d-5207.datasheet  kodak-vision3-50d-5203.datasheet  square-peak.datasheet  square.datasheet
profiles/film/: kodak-portra-400-experim-v2.film  kodak-portra-400-experim.film  kodak-portra-400-experim.phm.film  kodak-portra-400-new-v1.film  kodak-portra-400-new-v2.film  kodak-portra-400-new-v4.film  kodak-portra-400-new-v5.film  kodak-portra-400-v5.phm.film  kodak-vision-250d-5207.film
profiles/illuminants/: a.illuminant  d50.illuminant  d65.illuminant
profiles/paper/: fujicolor-crystal-archive-pearl-v2.phm.paper  kodak-endura-experim-v2.paper  kodak-endura-experim.paper  kodak-endura-experim.phm.paper  kodak-endura-new-v1.paper  kodak-endura-new-v2.paper  kodak-endura-new-v3.paper  kodak-endura-new-v4.paper  kodak-endura-new-v5.paper  kodak-endura-v3.phm.paper  kodak-endura-v4.phm.paper  kodak-endura-v5.phm.paper  kodak-endura-v6.phm.paper
research/profile/: data.py  illum.py  neg3.py  neg4.py  profile.py  utils.py  voronoi.py
research/profile/wthanson/: __trash.py  brewer.py  colors.py  couplers.py  couplers2.py  couplers_game.py  d55-bases.json  d55-bases.mat  data.py  datasheet.py  dyes_gamut.py  film_profile.py  gen_munsell_basis.py  gen_munsell_matrix.py  gen_spectral_bases.py  gen_spectral_basis2.py  hanson.py  illum.py  kodak-portra-400-portra-400.json  kodak-portra-400.json  kodak-vision-250d-5207-2.json  kodak-vision-250d-5207.json  mpl_couplers.py  munsell_basis.py  munsell_data.py  nocouplers.py  nocouplers2.py  plotter.py  refl_gamut.py  sigma.py  sigmoid.py  spectral_bases.py  spectral_basis.py  spectrum.json  spectrum.py  spectrum_plot.py  square.py  utils.py
src/: array_ops.h  arrays.h  cldriver.cc  cldriver.h  color.cc  color.h  data.cc  data.h  difp_profiler.cc  dir.h  filebrowser.cc  filebrowser.h  film.cc  film.h  frame.cc  frame.h  gui.cc  gui.h  image.cc  image.h  jpeg.cc  jpeg.h  main.cc  measure.h  photo_process_opts.cc  photo_process_opts.h  rgb32_image.h  spline.h  texture.cc  texture.h  utils.cc  utils.h  widgets.h
(+158 files in other folders)
